Throws incorrectly a syntax error when declaring a top level catch variable the same as a parameter https://bugs.webkit.org/show_bug.cgi?id=189914

Reviewed by Saam Barati.

JSTests:

* ChakraCore/test/es6/globalParamCatchNewTargetSyntaxError.baseline-jsc:
* stress/catch-destructuring-shadow-lexical-const-variable-global.js: Added.
(catch):
* stress/catch-destructuring-shadow-lexical-variable-class.js: Added.
(Foo):
(Bar):
(Baz):
* stress/catch-destructuring-shadow-lexical-variable-function.js: Added.
(foo):
(bar):
* stress/catch-destructuring-shadow-lexical-variable-global.js: Added.
(catch):
* stress/catch-destructuring-shadow-var-global.js: Added.
(catch):
* test262/expectations.yaml:

Source/JavaScriptCore:

When we are parsing catch block parameters we should increment the statement depth so we don't think
we are trying to shadow top level lexical variables in the same statement depth.

* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseTryStatement):


Canonical link: https://commits.webkit.org/221857@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258279 268f45cc-cd09-0410-ab3c-d52691b4dbfc